# sms-antiphishing

./: README.md  pyproject.toml
sms_antiphishing/cache/: url_cache.py
sms_antiphishing/configuration/: config.py
sms_antiphishing/controller/: controller.py
sms_antiphishing/models/: sms_request.py  sms_response.py
sms_antiphishing/processor/: sms_processor.py
sms_antiphishing/service/: phishing_checker.py  preferences_manager.py
