[tool.poetry]
name = "sms-antiphishing"
version = "0.1.0"
authors = ["AlexVcom <worobjowalex@gmaail.com>"]
description = "Anti-phishing SMS filter service"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
aiohttp = "^3.8.1"
redis = "^6.2.0"
python-dotenv = "^1.1.0"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.3"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"